getAll()메서드 불변 리스트 적용